[package]
name = "jobfileparser"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
getopts = "0.2.21"
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde =  { version = "1.0.204", features = ["derive"] }
serde-xml-rs = "0.6"
serde_derive = "1.0.204"
tempfile = "3.3"


[dev-dependencies]
quick-xml = { version = "0.36.1", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
serde_derive = "1.0"

